--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Righteous&display=swap');
+
 body {
+  font-family: 'Lato', sans-serif;
   box-sizing: border-box;
+  background-color: #fff;
+  scroll-behavior: smooth;
 }
